--- a/.github/workflows/main_analyseurreponse.yml
+++ b/.github/workflows/main_analyseurreponse.yml
@@ -39,7 +39,9 @@ jobs:
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here
-
+      - name: Set Environment Variables
+        run: echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
+              
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
