--- a/.github/workflows/main_analyseurreponse.yml
+++ b/.github/workflows/main_analyseurreponse.yml
@@ -36,7 +36,7 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: --target="./.python_packages/lib/site-packages" -r requirements.txt
+        run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here
       - name: Set Environment Variables
