--- a/.github/workflows/main_analyseurreponse.yml
+++ b/.github/workflows/main_analyseurreponse.yml
@@ -88,7 +88,7 @@ jobs:
           
       - name: Ensure Virtual Environment is Used
         run: |
-          source my.venv/bin/activate
+          source venv/bin/activate
           python -m pip check
           python -c "import sys; print(sys.path)"
           
