--- a/.github/workflows/main_analyseurreponse.yml
+++ b/.github/workflows/main_analyseurreponse.yml
@@ -34,18 +34,22 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+          
       - name: Set environment variable for Azure deployment
         run: echo "SCM_DO_BUILD_DURING_DEPLOYMENT=true" >> $GITHUB_ENV
         
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt --target="./.python_packages/lib/site-packages"
 
       # Optional: Add step to run tests here
       - name: Set Environment Variables
         run: echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
               
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+             zip -r release.zip . -x "my.venv/*" ".git/*" "__pycache__/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
